Is the overflowing height issue this easy?

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
     line-height: 1.5;
     color: var(--clr-black);
     background-color: var(--clr-white);
+    overflow: hidden;
 }
 
 /* ---------- TYPOGRAPHY ----------*/
@@ -245,12 +246,12 @@ button {
         color: var(--clr-black);
     }
 }
-@media (min-width: 600px) {
+@media (min-width: 650px) {
     .desktop-flex {
         display: flex;
         flex-direction: row;
         width: 100%;
-        height: 100%;
+        min-height: 100vh;
     }
     .hero,
     .form {
@@ -279,6 +280,9 @@ button {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+    }
+    .desktop-flex {
+        min-height: 100vh;
     }
     .hero,
     .form {
@@ -312,12 +316,9 @@ button {
         justify-content: center;
         align-items: center;
     }
-    /* .desktop-flex {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-        height: 100%;
-    } */
+    .desktop-flex {
+        min-height: 100vh;
+    }
     .hero,
     .form {
         flex: 1 1 50%;
